2006-07-10 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	msd plot axes are reset to loglog when done plotting.

2006-07-05 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed the bug where gui forgot the default browsing path. 
	
2006-07-03 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	Now allows looking at 1D msd of individual dimension (x,y,z).

2006-06-30 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	Now automatically exports results of msd to base workspace. Also plots msd on loglog scale instead of linearized log scale.
	
2006-06-22 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Now handles the box modes appropriately when the main figure is closed and then reploted by user.
	- Better handling of signal variety for time domain plot in stack mode.
	- Fixed a bug whereby time domain plot for stack wouldn't update if the box was partially out of axes limits.

2006-06-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed a bug in stack-box mode when selected signal was not of position type.

2006-06-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed a bug in plotting uneven-timestamps flag line.
	- Fixed a bug while switching from drag box mode to draw new box mode.

2006-06-16 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	Several bug fixes in the newly added features.

2006-06-16 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Now plots a flag-line if & when the time stamps are unevenly spaced.
	- Added a list of markers that can be looped through (in addition of colors) when overlaying several datasets.
	- Now same tag for different file is allowed (after warning). 

2006-06-15 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig:	
	- Fixed a bug while loading a file that is already loaded in the database.